error.log
file:///C:/Users/User/smart-hire-ai/server.js:6
import pdfParse from 'pdf-parse';
       ^^^^^^^^
SyntaxError: The requested module 'pdf-parse' does not provide an export named 'default'
    at #asyncInstantiate (node:internal/modules/esm/module_job:319:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:422:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:655:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:101:5)

Node.js v25.5.0
